# Autoencoder4XAS

./: .gitignore  README.md  Test_MTLver6.py  pyproject.toml  requirements.txt  setup.cfg  train_MNIST.py  trainer_test.py
.ipynb_checkpoints/: __init__-checkpoint.py
encodex/: __init__.py
encodex/models/: MTLv3.py  VAE_Bolt.py  __init__.py  autoencoders.py  lightning.py  lightningAE.py  lightningSS.py  lightningVAE.py  lightningXAS.py
encodex/train/: __init__.py  training.py
encodex/utils/: __init__.py  data_helpers.py  imports.py  plot_helpers.py  transforms.py
encodex/xasdata/: __init__.py
models/: MTLv3.py  lightning.py  lightningAE.py  lightningVAE.py  lightningXAS.py
models/.ipynb_checkpoints/: lightningAE-checkpoint.py  lightningSS-checkpoint.py  lightningVAE-checkpoint.py  lightningXAS-checkpoint.py
src/models/: MTL.py  MTL_TL.py  MTLv2.py  autoencoders.py
src/models/.ipynb_checkpoints/: MTL_v4-checkpoint.py  MTLv3-checkpoint.py  VAE_Bolt-checkpoint.py  __init__-checkpoint.py
src/train/: trainlightning.py
src/utils/: __init__.py  data_helpers.py  transforms.py
tests/: test_project_structure.py  test_training_scripts.py
train/: training.py
train/.ipynb_checkpoints/: __init__-checkpoint.py
xas_encoder/models/: MTL.py  MTL_TL.py  MTL_v4.py  MTLv2.py  lightning.py  lightningAE.py
xas_encoder/train/: trainlightning.py
xas_encoder/utils/: plot_helpers.py
xas_encoder/xasdata/: XASDataLoader.py
xasdata/: XASDataLoader.py  __init__.py
xasdata/.ipynb_checkpoints/: XASDataLoader-checkpoint.py
(+4 files in other folders)
