[metadata]
name = xas-encoder
version = 0.0.1
author = Prahlad K. Routh, Ph.D.
author_email = prahladkumar.routh@stonybrook.edu
description = A Pytorch Lightning based package for analyzing XAS data
long_description = file:READEME.md
long_description_content_type = text/markdown
url = https://github.com/pkrouth/EncodeX
project_urls =
    Bug Tracker = https://github.com/pkrouth/EncodeX/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
